--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "pillow>=10.0.0",
     "requests>=2.31.0",
     "pydantic>=2.11.8",
+    "tyro>=0.9.31",
 ]
 
 [project.urls]
@@ -39,3 +40,6 @@ dev = [
     "black>=25.1.0",
     "ipdb>=0.13.13",
 ]
+
+[project.scripts]
+quote0 = "quote0.cli:main"
