--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ dependencies = [
     "requests>=2.31.0",
     "pydantic>=2.11.8",
     "tyro>=0.9.31",
+    "matplotlib>=3.8.0",
+    "numpy>=1.26.0",
 ]
 
 [project.urls]
