--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "quote0"
 version = "0.1.0"
 description = "Python API client for Quote/0 display device"
 readme = "README.md"
+license = "MIT"
 requires-python = ">=3.13"
 authors = [
     {name = "Quote/0 Team"},
@@ -42,6 +43,8 @@ packages = ["src/quote0"]
 dev = [
     "black>=25.1.0",
     "ipdb>=0.13.13",
+    "build>=1.0.0",
+    "twine>=4.0.0",
 ]
 
 [project.scripts]
