--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [project]
 name = "quote0"
-version = "0.1.0"
+version = "0.1.1"
 description = "Python API client for Quote/0 display device"
 readme = "README.md"
 license = "MIT"
-requires-python = ">=3.13"
+requires-python = ">=3.9"
 authors = [
-    {name = "Quote/0 Team"},
+    {name = "Da-Wei Lee"},
 ]
 keywords = ["quote0", "display", "api", "iot"]
 classifiers = [
@@ -14,6 +14,10 @@ classifiers = [
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
 ]
 dependencies = [
